# netstat-monitor

./: .gitignore  MANIFEST.in  README  README.md  check-all  mypy.ini  netstat-monitor  netstat-test  netstat.py  pyproject.toml  sample-filters  setup.cfg  setup.py  tuzo-netstat-monitor
netstat/: .pylintrc  __init__.py  filters.py  shared.py  sockets.py
test/: .pylintrc  test-netstat  test_netstat
