[metadata]
name = netstat-monitor
version = attr: netstat.__version__
author = Sean Alexandre
author_email = sean@alexan.org
description = CLI based network connection monitoring tool
long_description = file: README.md
url = https://github.com/stalexan/netstat-monitor
project_urls =
    Bug Tracker = https://github.com/stalexan/netstat-monitor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux

[options]
py_modules = netstat
python_requires = >=3.3
platforms = linux
include_package_data = True
install_requires =
    netaddr

[options.entry_points]
console_scripts =
    netstat-monitor = netstat:main

